--- a/src/assets/style/grid/cartao.css
+++ b/src/assets/style/grid/cartao.css
@@ -8,7 +8,7 @@
     grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: 4; */
-    grid-column: 1/1/4/2;
+    grid-area: 1/1/4/2;
 }
 .secao-horizontal .cartao__botao{
     grid-column: 3/4;
